minikube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: babylon-minikube
  labels:
    app: babylon-minikube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: babylon-minikube
  template:
    metadata:
      labels:
        app: babylon-minikube
    spec:
      serviceAccountName: babylon-service-account
      containers:
        - name: babylon-minikube
          imagePullPolicy: Never
          image: babylon
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /etc/config
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: babylon-working-hours
            items:
              - key: "working-hours.yaml"
                path: "./working-hours.yaml"
---
apiVersion: v1
kind: Service
metadata:
  name: babylon-service
spec:
  selector:
    app: babylon-minikube
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: babylon-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: babylon.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: babylon-service
                port:
                  number: 8080
